Tue Jul 18 12:54:39 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: --diff: detect removal of last lines

Tue Jul 18 01:59:53 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: --diff: algorithm now detects line removals

Mon Jul 17 16:54:05 BST 2006 (njh)
----------------------------------
 * clamav-milter:	Fix compilation error on NetBSD 2.0

Mon Jul 17 12:15:41 CEST 2006 (tk)
----------------------------------
  * libclamav/pe.c: fix error path memory leaks

Mon Jul 17 11:13:18 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Added sanity check for --server when --external isn't
				given

Mon Jul 17 11:40:14 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: fix NULL pointer dereference in new code, reported
			 by Gianluigi Tiesi <sherpya*netfarm.it>

Mon Jul 17 03:00:21 CEST 2006 (acab)
------------------------------------
  * libclamav/wwunpack.c: image size fixup 

Mon Jul 17 01:17:40 CEST 2006 (acab)
------------------------------------
  * libclamav: wwpack32 handler secured and activated

Sun Jul 16 21:42:58 CEST 2006 (acab)
------------------------------------
  * libclamav: added support for wwpack32 - not yet activated

Sat Jul 15 21:33:22 BST 2006 (njh)
----------------------------------
  * libclamav/message.c:	Some HTML.Phishing.Bank-1 were getting through,
					  Fix by Torok Edvin
					  <edwintorok*gmail.com>

Sat Jul 15 00:15:17 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: initial support for incremental updates

Fri Jul 14 13:14:13 BST 2006 (njh)
----------------------------------
  * libclamav/table.c:	Added tableIterate
  * clamav-milter:	Added black hole mode and IP blacklist support

Fri Jul 14 08:45:04 BST 2006 (njh)
----------------------------------
  * libclamav/table:	Added helper routines to delete items

Wed Jul 12 16:37:44 BST 2006 (njh)
----------------------------------